tests/postgres/ui-common/grouped_section_wrong_width.stderr
error: sql_forge!: grouped section value must provide exactly 2 items
  --> tests/postgres/tmp-ui/grouped_section_wrong_width.rs:13:37
   |
13 |                 true => ("", "", ""),
   |                                     ^
